@@ -36,6 +36,7 @@ class EdcaParameterSet : public WifiInformationElement
 public:
   EdcaParameterSet ();
   void SetQosSupported (uint8_t qosSupported);
+  uint8_t IsQosSupported (void) const;
   
   /**
    * Set the QoS Info field in the EdcaParameterSet information element.
