@@ -60,6 +60,7 @@ Bugs fixed
 - Bug 2590 - Minor enhancements in red-queue-disc{.h, .cc}
 - Bug 2591 - 802.11e Block Ack mechanism cannot be enabled on HT/VHT stations
 - Bug 2594 - vht-wifi-network provides very low throughtput at MCS 6, 160 MHz, SGI
+- Bug 2605 - A HT/VHT station transmitting to a legacy access point results in a null throughput
 - Bug 2614 - RIP header version should be set to 2
 
 Known issues
